<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_half_back_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="329dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_setting_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_setting_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hi_there_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/base_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/base_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_half_background"
        app:layout_constraintBottom_toTopOf="@id/top_half_back_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_32sdp"
        android:src="@drawable/techi_echo"
        app:layout_constraintBottom_toTopOf="@+id/top_setting_horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_setting"
        android:clickable="true"
        android:padding="@dimen/_2sdp"
        android:background="@drawable/profile_selected"
        android:stateListAnimator="@animator/btn_animator"
        app:layout_constraintBottom_toTopOf="@id/top_setting_horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@id/base_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/top_setting_vertical_guideline" />

    <TextView
        android:id="@+id/hi_there_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/hi_there"
        android:textColor="@color/hiThereColor"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintBottom_toTopOf="@id/hi_there_horizontal_guideline"
        app:layout_constraintStart_toEndOf="@id/base_start_vertical_guideline" />

    <TextView
        android:id="@+id/user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:paddingStart="@dimen/_8sdp"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintBottom_toTopOf="@id/hi_there_horizontal_guideline"
        app:layout_constraintStart_toEndOf="@id/hi_there_tv" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edit_text_back"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/email"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/editTextColor"
        android:textSize="@dimen/_15ssp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@id/base_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/base_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/hi_there_horizontal_guideline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_et_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/base_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/base_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        >

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_back"
            android:fontFamily="@font/inter_medium"
            android:hint="Password"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextColor"
            android:textSize="@dimen/_15ssp"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/show_password_iv"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_show_password"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_password_et_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/base_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/base_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/password_et_layout"
        >

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_back"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/Confirm_password"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextColor"
            android:textSize="@dimen/_15ssp"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/show_confirm_password_iv"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_show_password"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:clickable="true"
        android:stateListAnimator="@animator/btn_animator"
        app:cardBackgroundColor="@color/buttonBackDark"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/base_end_vertical_guideline"
        app:layout_constraintStart_toStartOf="@+id/base_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_half_back_guideline">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4sdp"
            app:cardBackgroundColor="@color/buttonBackLight"
            app:cardCornerRadius="@dimen/_7sdp">

            <TextView
                android:id="@+id/drawer_item_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />


        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/or_linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/base_end_vertical_guideline"
        app:layout_constraintStart_toEndOf="@id/base_start_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/_4sdp"
            android:src="@drawable/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:padding="@dimen/_2sdp"
            android:text="@string/or"
            android:textColor="@color/orColor"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/_4sdp"
            android:src="@drawable/line" />


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="#656565"
        android:clickable="true"
        android:stateListAnimator="@animator/btn_animator"
        app:layout_constraintStart_toEndOf="@id/base_start_vertical_guideline"
        app:layout_constraintEnd_toStartOf="@id/base_end_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/or_linear"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_7sdp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_google"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:padding="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/Cotinue_with_google"
                android:textColor="#E2787878"
                android:textSize="@dimen/_15ssp" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>